-
Bug
-
Resolution: Done
-
P1: Critical
-
5.7.0
-
None
lipi_toolkit feature is currently broken in 5.7 branch. There are number of compilation fixes in 5.6 branch that have not been merged to 5.7. Also commit with Change-Id: I2f983cb8fc3713fea25cd103013d0ce5356ffa0c broke lipi_toolkit at runtime, since the engine libraries and configs are not in expected locations.
For Gerrit Dashboard: QTBUG-53366 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
161130,2 | Fix linking when using CONFIG+=lipi-toolkit | 5.7.0 | qt/qtvirtualkeyboard | Status: MERGED | +2 | 0 |
161135,2 | Fix path to lipi cfg file | 5.7.0 | qt/qtvirtualkeyboard | Status: MERGED | +2 | 0 |