Fix path to lipi cfg file

It was using

qtbase/lipi_toolkit/projects/lipiengine.cfg

but it should be

qtbase/qtvirtualkeyboard/lipi_toolkit/projects/lipiengine.cfg

Change-Id: Ib8a7fe62739c23470e536ac25e16483df499a1a6
Task-number: QTBUG-53366
Reviewed-by: Samuli Piippo <samuli.piippo@qt.io>